program4_bison.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input classdec
    3      | error

    4 classdec: CLASS IDENTIFIER classbody

    5 classbody: LBRACE RBRACE
    6          | LBRACE vardecr RBRACE
    7          | LBRACE vardecr constructordecr RBRACE
    8          | LBRACE vardecr constructordecr methoddecr RBRACE
    9          | LBRACE constructordecr methoddecr RBRACE
   10          | LBRACE methoddecr RBRACE

   11 vardecr: vardec
   12        | vardecr vardec

   13 constructordecr: constructordec
   14                | constructordecr constructordec

   15 methoddecr: methoddec
   16           | methoddecr methoddec

   17 statement: name ASSIGNOP expression SEMICO
   18          | name LPAREN arglist RPAREN SEMICO
   19          | PRINT LPAREN arglist RPAREN SEMICO
   20          | WHILE LPAREN expression RPAREN statement
   21          | RETURN expression SEMICO
   22          | RETURN SEMICO
   23          | conditionalstatement
   24          | block

   25 block: LBRACE RBRACE
   26      | LBRACE vardecr RBRACE
   27      | LBRACE vardecr statementr RBRACE
   28      | LBRACE statementr RBRACE

   29 statementr: statement
   30           | statementr statement

   31 conditionalstatement: IF LPAREN expression RPAREN statement
   32                     | IF LPAREN expression RPAREN statement ELSE statement

   33 constructordec: IDENTIFIER LPAREN paramlist RPAREN block
   34               | IDENTIFIER LPAREN RPAREN block

   35 methoddec: type IDENTIFIER LPAREN paramlist RPAREN block
   36          | type IDENTIFIER LPAREN RPAREN block
   37          | VOID IDENTIFIER LPAREN paramlist RPAREN block
   38          | VOID IDENTIFIER LPAREN RPAREN block

   39 paramlist: param
   40          | param COMMA paramlist

   41 param: type IDENTIFIER

   42 vardec: type IDENTIFIER SEMICO

   43 expression: NUM
   44           | NULLKEYWORD
   45           | READ LPAREN RPAREN
   46           | READ LPAREN error
   47           | unaryop expression
   48           | unaryop error
   49           | expression relationop expression
   50           | expression relationop error
   51           | expression productop expression
   52           | expression productop error
   53           | expression sumop expression
   54           | expression sumop error
   55           | LPAREN expression RPAREN
   56           | LPAREN expression error
   57           | newexpression
   58           | name
   59           | name LPAREN arglist RPAREN
   60           | name LPAREN arglist error

   61 name: THIS
   62     | IDENTIFIER
   63     | name DOTOP IDENTIFIER
   64     | name LBRACK expression RBRACK
   65     | IDENTIFIER LBRACK expression RBRACK
   66     | IDENTIFIER LBRACK expression error
   67     | name LBRACK expression error

   68 newexpression: NEW IDENTIFIER LPAREN arglist RPAREN
   69              | NEW IDENTIFIER LPAREN RPAREN
   70              | NEW IDENTIFIER LPAREN arglist error
   71              | NEW IDENTIFIER
   72              | NEW IDENTIFIER brackexpression
   73              | NEW IDENTIFIER multibracks
   74              | NEW IDENTIFIER brackexpression multibracks
   75              | NEW INT LPAREN arglist RPAREN
   76              | NEW INT LPAREN RPAREN
   77              | NEW INT LPAREN arglist error
   78              | NEW INT
   79              | NEW INT brackexpression
   80              | NEW INT brackexpression multibracks
   81              | NEW INT multibracks
   82              | NEW error

   83 brackexpression: LBRACK expression RBRACK
   84                | brackexpression LBRACK expression RBRACK

   85 arglist: expression COMMA arglist
   86        | expression

   87 unaryop: PLUS
   88        | MINUS
   89        | NOT

   90 relationop: DOUBEQ
   91           | NOTEQ
   92           | LESSEQ
   93           | GREATEQ
   94           | LESS
   95           | GREAT

   96 productop: TIMES
   97          | DIVIDE
   98          | MOD
   99          | DOUBAND

  100 sumop: MINUS
  101      | PLUS
  102      | DOUBBAR

  103 type: INT
  104     | IDENTIFIER
  105     | INT multibracks
  106     | IDENTIFIER multibracks

  107 multibracks: LBRACK RBRACK
  108            | multibracks LBRACK RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256) 3 46 48 50 52 54 56 60 66 67 70 77 82
CLASS (258) 4
THIS (259) 61
IF (260) 31 32
ELSE (261) 32
WHILE (262) 20
RETURN (263) 21 22
PRINT (264) 19
READ (265) 45 46
VOID (266) 37 38
NEW (267) 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
NULLKEYWORD (268) 44
INT (269) 75 76 77 78 79 80 81 103 105
ASSIGNOP (270) 17
DOTOP (271) 63
COMMA (272) 40 85
LPAREN (273) 18 19 20 31 32 33 34 35 36 37 38 45 46 55 56 59 60 68
    69 70 75 76 77
RPAREN (274) 18 19 20 31 32 33 34 35 36 37 38 45 55 59 68 69 75 76
LBRACK (275) 64 65 66 67 83 84 107 108
RBRACK (276) 64 65 83 84 107 108
LBRACE (277) 5 6 7 8 9 10 25 26 27 28
RBRACE (278) 5 6 7 8 9 10 25 26 27 28
PLUS (279) 87 101
MINUS (280) 88 100
NOT (281) 89
DOUBEQ (282) 90
NOTEQ (283) 91
LESSEQ (284) 92
GREATEQ (285) 93
LESS (286) 94
GREAT (287) 95
TIMES (288) 96
DIVIDE (289) 97
MOD (290) 98
DOUBAND (291) 99
DOUBBAR (292) 102
IDENTIFIER (293) 4 33 34 35 36 37 38 41 42 62 63 65 66 68 69 70 71
    72 73 74 104 106
SEMICO (294) 17 18 19 21 22 42
NUM (295) 43
IFEL (296)
NAME (297)
RE (298)
BIN (299)
PRO (300)
NEG (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
input (48)
    on left: 1 2 3, on right: 0 2
classdec (49)
    on left: 4, on right: 2
classbody (50)
    on left: 5 6 7 8 9 10, on right: 4
vardecr (51)
    on left: 11 12, on right: 6 7 8 12 26 27
constructordecr (52)
    on left: 13 14, on right: 7 8 9 14
methoddecr (53)
    on left: 15 16, on right: 8 9 10 16
statement (54)
    on left: 17 18 19 20 21 22 23 24, on right: 20 29 30 31 32
block (55)
    on left: 25 26 27 28, on right: 24 33 34 35 36 37 38
statementr (56)
    on left: 29 30, on right: 27 28 30
conditionalstatement (57)
    on left: 31 32, on right: 23
constructordec (58)
    on left: 33 34, on right: 13 14
methoddec (59)
    on left: 35 36 37 38, on right: 15 16
paramlist (60)
    on left: 39 40, on right: 33 35 37 40
param (61)
    on left: 41, on right: 39 40
vardec (62)
    on left: 42, on right: 11 12
expression (63)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 17 20 21 31 32 47 49 50 51 52 53 54 55 56 64 65 66 67
    83 84 85 86
name (64)
    on left: 61 62 63 64 65 66 67, on right: 17 18 58 59 60 63 64 67
newexpression (65)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82, on right:
    57
brackexpression (66)
    on left: 83 84, on right: 72 74 79 80 84
arglist (67)
    on left: 85 86, on right: 18 19 59 60 68 70 75 77 85
unaryop (68)
    on left: 87 88 89, on right: 47 48
relationop (69)
    on left: 90 91 92 93 94 95, on right: 49 50
productop (70)
    on left: 96 97 98 99, on right: 51 52
sumop (71)
    on left: 100 101 102, on right: 53 54
type (72)
    on left: 103 104 105 106, on right: 35 36 41 42
multibracks (73)
    on left: 107 108, on right: 73 74 80 81 105 106 108


State 0

    0 $accept: . input $end

    error  shift, and go to state 1

    $end   reduce using rule 1 (input)
    CLASS  reduce using rule 1 (input)

    input  go to state 2


State 1

    3 input: error .

    $default  reduce using rule 3 (input)


State 2

    0 $accept: input . $end
    2 input: input . classdec

    $end   shift, and go to state 3
    CLASS  shift, and go to state 4

    classdec  go to state 5


State 3

    0 $accept: input $end .

    $default  accept


State 4

    4 classdec: CLASS . IDENTIFIER classbody

    IDENTIFIER  shift, and go to state 6


State 5

    2 input: input classdec .

    $default  reduce using rule 2 (input)


State 6

    4 classdec: CLASS IDENTIFIER . classbody

    LBRACE  shift, and go to state 7

    classbody  go to state 8


State 7

    5 classbody: LBRACE . RBRACE
    6          | LBRACE . vardecr RBRACE
    7          | LBRACE . vardecr constructordecr RBRACE
    8          | LBRACE . vardecr constructordecr methoddecr RBRACE
    9          | LBRACE . constructordecr methoddecr RBRACE
   10          | LBRACE . methoddecr RBRACE

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 11
    IDENTIFIER  shift, and go to state 12

    vardecr          go to state 13
    constructordecr  go to state 14
    methoddecr       go to state 15
    constructordec   go to state 16
    methoddec        go to state 17
    vardec           go to state 18
    type             go to state 19


State 8

    4 classdec: CLASS IDENTIFIER classbody .

    $default  reduce using rule 4 (classdec)


State 9

   37 methoddec: VOID . IDENTIFIER LPAREN paramlist RPAREN block
   38          | VOID . IDENTIFIER LPAREN RPAREN block

    IDENTIFIER  shift, and go to state 20


State 10

  103 type: INT .
  105     | INT . multibracks

    LBRACK  shift, and go to state 21

    $default  reduce using rule 103 (type)

    multibracks  go to state 22


State 11

    5 classbody: LBRACE RBRACE .

    $default  reduce using rule 5 (classbody)


State 12

   33 constructordec: IDENTIFIER . LPAREN paramlist RPAREN block
   34               | IDENTIFIER . LPAREN RPAREN block
  104 type: IDENTIFIER .
  106     | IDENTIFIER . multibracks

    LPAREN  shift, and go to state 23
    LBRACK  shift, and go to state 21

    $default  reduce using rule 104 (type)

    multibracks  go to state 24


State 13

    6 classbody: LBRACE vardecr . RBRACE
    7          | LBRACE vardecr . constructordecr RBRACE
    8          | LBRACE vardecr . constructordecr methoddecr RBRACE
   12 vardecr: vardecr . vardec

    INT         shift, and go to state 10
    RBRACE      shift, and go to state 25
    IDENTIFIER  shift, and go to state 12

    constructordecr  go to state 26
    constructordec   go to state 16
    vardec           go to state 27
    type             go to state 28


State 14

    9 classbody: LBRACE constructordecr . methoddecr RBRACE
   14 constructordecr: constructordecr . constructordec

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 12

    methoddecr      go to state 29
    constructordec  go to state 30
    methoddec       go to state 17
    type            go to state 31


State 15

   10 classbody: LBRACE methoddecr . RBRACE
   16 methoddecr: methoddecr . methoddec

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 32
    IDENTIFIER  shift, and go to state 33

    methoddec  go to state 34
    type       go to state 31


State 16

   13 constructordecr: constructordec .

    $default  reduce using rule 13 (constructordecr)


State 17

   15 methoddecr: methoddec .

    $default  reduce using rule 15 (methoddecr)


State 18

   11 vardecr: vardec .

    $default  reduce using rule 11 (vardecr)


State 19

   35 methoddec: type . IDENTIFIER LPAREN paramlist RPAREN block
   36          | type . IDENTIFIER LPAREN RPAREN block
   42 vardec: type . IDENTIFIER SEMICO

    IDENTIFIER  shift, and go to state 35


State 20

   37 methoddec: VOID IDENTIFIER . LPAREN paramlist RPAREN block
   38          | VOID IDENTIFIER . LPAREN RPAREN block

    LPAREN  shift, and go to state 36


State 21

  107 multibracks: LBRACK . RBRACK

    RBRACK  shift, and go to state 37


State 22

  105 type: INT multibracks .
  108 multibracks: multibracks . LBRACK RBRACK

    LBRACK  shift, and go to state 38

    $default  reduce using rule 105 (type)


State 23

   33 constructordec: IDENTIFIER LPAREN . paramlist RPAREN block
   34               | IDENTIFIER LPAREN . RPAREN block

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 33

    paramlist  go to state 40
    param      go to state 41
    type       go to state 42


State 24

  106 type: IDENTIFIER multibracks .
  108 multibracks: multibracks . LBRACK RBRACK

    LBRACK  shift, and go to state 38

    $default  reduce using rule 106 (type)


State 25

    6 classbody: LBRACE vardecr RBRACE .

    $default  reduce using rule 6 (classbody)


State 26

    7 classbody: LBRACE vardecr constructordecr . RBRACE
    8          | LBRACE vardecr constructordecr . methoddecr RBRACE
   14 constructordecr: constructordecr . constructordec

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 43
    IDENTIFIER  shift, and go to state 12

    methoddecr      go to state 44
    constructordec  go to state 30
    methoddec       go to state 17
    type            go to state 31


State 27

   12 vardecr: vardecr vardec .

    $default  reduce using rule 12 (vardecr)


State 28

   42 vardec: type . IDENTIFIER SEMICO

    IDENTIFIER  shift, and go to state 45


State 29

    9 classbody: LBRACE constructordecr methoddecr . RBRACE
   16 methoddecr: methoddecr . methoddec

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 46
    IDENTIFIER  shift, and go to state 33

    methoddec  go to state 34
    type       go to state 31


State 30

   14 constructordecr: constructordecr constructordec .

    $default  reduce using rule 14 (constructordecr)


State 31

   35 methoddec: type . IDENTIFIER LPAREN paramlist RPAREN block
   36          | type . IDENTIFIER LPAREN RPAREN block

    IDENTIFIER  shift, and go to state 47


State 32

   10 classbody: LBRACE methoddecr RBRACE .

    $default  reduce using rule 10 (classbody)


State 33

  104 type: IDENTIFIER .
  106     | IDENTIFIER . multibracks

    LBRACK  shift, and go to state 21

    $default  reduce using rule 104 (type)

    multibracks  go to state 24


State 34

   16 methoddecr: methoddecr methoddec .

    $default  reduce using rule 16 (methoddecr)


State 35

   35 methoddec: type IDENTIFIER . LPAREN paramlist RPAREN block
   36          | type IDENTIFIER . LPAREN RPAREN block
   42 vardec: type IDENTIFIER . SEMICO

    LPAREN  shift, and go to state 48
    SEMICO  shift, and go to state 49


State 36

   37 methoddec: VOID IDENTIFIER LPAREN . paramlist RPAREN block
   38          | VOID IDENTIFIER LPAREN . RPAREN block

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 50
    IDENTIFIER  shift, and go to state 33

    paramlist  go to state 51
    param      go to state 41
    type       go to state 42


State 37

  107 multibracks: LBRACK RBRACK .

    $default  reduce using rule 107 (multibracks)


State 38

  108 multibracks: multibracks LBRACK . RBRACK

    RBRACK  shift, and go to state 52


State 39

   34 constructordec: IDENTIFIER LPAREN RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 54


State 40

   33 constructordec: IDENTIFIER LPAREN paramlist . RPAREN block

    RPAREN  shift, and go to state 55


State 41

   39 paramlist: param .
   40          | param . COMMA paramlist

    COMMA  shift, and go to state 56

    $default  reduce using rule 39 (paramlist)


State 42

   41 param: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 57


State 43

    7 classbody: LBRACE vardecr constructordecr RBRACE .

    $default  reduce using rule 7 (classbody)


State 44

    8 classbody: LBRACE vardecr constructordecr methoddecr . RBRACE
   16 methoddecr: methoddecr . methoddec

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 58
    IDENTIFIER  shift, and go to state 33

    methoddec  go to state 34
    type       go to state 31


State 45

   42 vardec: type IDENTIFIER . SEMICO

    SEMICO  shift, and go to state 49


State 46

    9 classbody: LBRACE constructordecr methoddecr RBRACE .

    $default  reduce using rule 9 (classbody)


State 47

   35 methoddec: type IDENTIFIER . LPAREN paramlist RPAREN block
   36          | type IDENTIFIER . LPAREN RPAREN block

    LPAREN  shift, and go to state 48


State 48

   35 methoddec: type IDENTIFIER LPAREN . paramlist RPAREN block
   36          | type IDENTIFIER LPAREN . RPAREN block

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 33

    paramlist  go to state 60
    param      go to state 41
    type       go to state 42


State 49

   42 vardec: type IDENTIFIER SEMICO .

    $default  reduce using rule 42 (vardec)


State 50

   38 methoddec: VOID IDENTIFIER LPAREN RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 61


State 51

   37 methoddec: VOID IDENTIFIER LPAREN paramlist . RPAREN block

    RPAREN  shift, and go to state 62


State 52

  108 multibracks: multibracks LBRACK RBRACK .

    $default  reduce using rule 108 (multibracks)


State 53

   25 block: LBRACE . RBRACE
   26      | LBRACE . vardecr RBRACE
   27      | LBRACE . vardecr statementr RBRACE
   28      | LBRACE . statementr RBRACE

    THIS        shift, and go to state 63
    IF          shift, and go to state 64
    WHILE       shift, and go to state 65
    RETURN      shift, and go to state 66
    PRINT       shift, and go to state 67
    INT         shift, and go to state 10
    LBRACE      shift, and go to state 53
    RBRACE      shift, and go to state 68
    IDENTIFIER  shift, and go to state 69

    vardecr               go to state 70
    statement             go to state 71
    block                 go to state 72
    statementr            go to state 73
    conditionalstatement  go to state 74
    vardec                go to state 18
    name                  go to state 75
    type                  go to state 28


State 54

   34 constructordec: IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 34 (constructordec)


State 55

   33 constructordec: IDENTIFIER LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 76


State 56

   40 paramlist: param COMMA . paramlist

    INT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 33

    paramlist  go to state 77
    param      go to state 41
    type       go to state 42


State 57

   41 param: type IDENTIFIER .

    $default  reduce using rule 41 (param)


State 58

    8 classbody: LBRACE vardecr constructordecr methoddecr RBRACE .

    $default  reduce using rule 8 (classbody)


State 59

   36 methoddec: type IDENTIFIER LPAREN RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 78


State 60

   35 methoddec: type IDENTIFIER LPAREN paramlist . RPAREN block

    RPAREN  shift, and go to state 79


State 61

   38 methoddec: VOID IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 38 (methoddec)


State 62

   37 methoddec: VOID IDENTIFIER LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 80


State 63

   61 name: THIS .

    $default  reduce using rule 61 (name)


State 64

   31 conditionalstatement: IF . LPAREN expression RPAREN statement
   32                     | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 81


State 65

   20 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 82


State 66

   21 statement: RETURN . expression SEMICO
   22          | RETURN . SEMICO

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    SEMICO       shift, and go to state 91
    NUM          shift, and go to state 92

    expression     go to state 93
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 67

   19 statement: PRINT . LPAREN arglist RPAREN SEMICO

    LPAREN  shift, and go to state 97


State 68

   25 block: LBRACE RBRACE .

    $default  reduce using rule 25 (block)


State 69

   62 name: IDENTIFIER .
   65     | IDENTIFIER . LBRACK expression RBRACK
   66     | IDENTIFIER . LBRACK expression error
  104 type: IDENTIFIER .
  106     | IDENTIFIER . multibracks

    LBRACK  shift, and go to state 98

    IDENTIFIER  reduce using rule 104 (type)
    $default    reduce using rule 62 (name)

    multibracks  go to state 24


State 70

   12 vardecr: vardecr . vardec
   26 block: LBRACE vardecr . RBRACE
   27      | LBRACE vardecr . statementr RBRACE

    THIS        shift, and go to state 63
    IF          shift, and go to state 64
    WHILE       shift, and go to state 65
    RETURN      shift, and go to state 66
    PRINT       shift, and go to state 67
    INT         shift, and go to state 10
    LBRACE      shift, and go to state 53
    RBRACE      shift, and go to state 99
    IDENTIFIER  shift, and go to state 69

    statement             go to state 71
    block                 go to state 72
    statementr            go to state 100
    conditionalstatement  go to state 74
    vardec                go to state 27
    name                  go to state 75
    type                  go to state 28


State 71

   29 statementr: statement .

    $default  reduce using rule 29 (statementr)


State 72

   24 statement: block .

    $default  reduce using rule 24 (statement)


State 73

   28 block: LBRACE statementr . RBRACE
   30 statementr: statementr . statement

    THIS        shift, and go to state 63
    IF          shift, and go to state 64
    WHILE       shift, and go to state 65
    RETURN      shift, and go to state 66
    PRINT       shift, and go to state 67
    LBRACE      shift, and go to state 53
    RBRACE      shift, and go to state 101
    IDENTIFIER  shift, and go to state 90

    statement             go to state 102
    block                 go to state 72
    conditionalstatement  go to state 74
    name                  go to state 75


State 74

   23 statement: conditionalstatement .

    $default  reduce using rule 23 (statement)


State 75

   17 statement: name . ASSIGNOP expression SEMICO
   18          | name . LPAREN arglist RPAREN SEMICO
   63 name: name . DOTOP IDENTIFIER
   64     | name . LBRACK expression RBRACK
   67     | name . LBRACK expression error

    ASSIGNOP  shift, and go to state 103
    DOTOP     shift, and go to state 104
    LPAREN    shift, and go to state 105
    LBRACK    shift, and go to state 106


State 76

   33 constructordec: IDENTIFIER LPAREN paramlist RPAREN block .

    $default  reduce using rule 33 (constructordec)


State 77

   40 paramlist: param COMMA paramlist .

    $default  reduce using rule 40 (paramlist)


State 78

   36 methoddec: type IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 36 (methoddec)


State 79

   35 methoddec: type IDENTIFIER LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 53

    block  go to state 107


State 80

   37 methoddec: VOID IDENTIFIER LPAREN paramlist RPAREN block .

    $default  reduce using rule 37 (methoddec)


State 81

   31 conditionalstatement: IF LPAREN . expression RPAREN statement
   32                     | IF LPAREN . expression RPAREN statement ELSE statement

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 108
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 82

   20 statement: WHILE LPAREN . expression RPAREN statement

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 109
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 83

   45 expression: READ . LPAREN RPAREN
   46           | READ . LPAREN error

    LPAREN  shift, and go to state 110


State 84

   68 newexpression: NEW . IDENTIFIER LPAREN arglist RPAREN
   69              | NEW . IDENTIFIER LPAREN RPAREN
   70              | NEW . IDENTIFIER LPAREN arglist error
   71              | NEW . IDENTIFIER
   72              | NEW . IDENTIFIER brackexpression
   73              | NEW . IDENTIFIER multibracks
   74              | NEW . IDENTIFIER brackexpression multibracks
   75              | NEW . INT LPAREN arglist RPAREN
   76              | NEW . INT LPAREN RPAREN
   77              | NEW . INT LPAREN arglist error
   78              | NEW . INT
   79              | NEW . INT brackexpression
   80              | NEW . INT brackexpression multibracks
   81              | NEW . INT multibracks
   82              | NEW . error

    error       shift, and go to state 111
    INT         shift, and go to state 112
    IDENTIFIER  shift, and go to state 113


State 85

   44 expression: NULLKEYWORD .

    $default  reduce using rule 44 (expression)


State 86

   55 expression: LPAREN . expression RPAREN
   56           | LPAREN . expression error

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 114
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 87

   87 unaryop: PLUS .

    $default  reduce using rule 87 (unaryop)


State 88

   88 unaryop: MINUS .

    $default  reduce using rule 88 (unaryop)


State 89

   89 unaryop: NOT .

    $default  reduce using rule 89 (unaryop)


State 90

   62 name: IDENTIFIER .
   65     | IDENTIFIER . LBRACK expression RBRACK
   66     | IDENTIFIER . LBRACK expression error

    LBRACK  shift, and go to state 115

    $default  reduce using rule 62 (name)


State 91

   22 statement: RETURN SEMICO .

    $default  reduce using rule 22 (statement)


State 92

   43 expression: NUM .

    $default  reduce using rule 43 (expression)


State 93

   21 statement: RETURN expression . SEMICO
   49 expression: expression . relationop expression
   50           | expression . relationop error
   51           | expression . productop expression
   52           | expression . productop error
   53           | expression . sumop expression
   54           | expression . sumop error

    PLUS     shift, and go to state 116
    MINUS    shift, and go to state 117
    DOUBEQ   shift, and go to state 118
    NOTEQ    shift, and go to state 119
    LESSEQ   shift, and go to state 120
    GREATEQ  shift, and go to state 121
    LESS     shift, and go to state 122
    GREAT    shift, and go to state 123
    TIMES    shift, and go to state 124
    DIVIDE   shift, and go to state 125
    MOD      shift, and go to state 126
    DOUBAND  shift, and go to state 127
    DOUBBAR  shift, and go to state 128
    SEMICO   shift, and go to state 129

    relationop  go to state 130
    productop   go to state 131
    sumop       go to state 132


State 94

   58 expression: name .
   59           | name . LPAREN arglist RPAREN
   60           | name . LPAREN arglist error
   63 name: name . DOTOP IDENTIFIER
   64     | name . LBRACK expression RBRACK
   67     | name . LBRACK expression error

    DOTOP   shift, and go to state 104
    LPAREN  shift, and go to state 133
    LBRACK  shift, and go to state 106

    $default  reduce using rule 58 (expression)


State 95

   57 expression: newexpression .

    $default  reduce using rule 57 (expression)


State 96

   47 expression: unaryop . expression
   48           | unaryop . error

    error        shift, and go to state 134
    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 135
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 97

   19 statement: PRINT LPAREN . arglist RPAREN SEMICO

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 136
    name           go to state 94
    newexpression  go to state 95
    arglist        go to state 137
    unaryop        go to state 96


State 98

   65 name: IDENTIFIER LBRACK . expression RBRACK
   66     | IDENTIFIER LBRACK . expression error
  107 multibracks: LBRACK . RBRACK

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    RBRACK       shift, and go to state 37
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 138
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 99

   26 block: LBRACE vardecr RBRACE .

    $default  reduce using rule 26 (block)


State 100

   27 block: LBRACE vardecr statementr . RBRACE
   30 statementr: statementr . statement

    THIS        shift, and go to state 63
    IF          shift, and go to state 64
    WHILE       shift, and go to state 65
    RETURN      shift, and go to state 66
    PRINT       shift, and go to state 67
    LBRACE      shift, and go to state 53
    RBRACE      shift, and go to state 139
    IDENTIFIER  shift, and go to state 90

    statement             go to state 102
    block                 go to state 72
    conditionalstatement  go to state 74
    name                  go to state 75


State 101

   28 block: LBRACE statementr RBRACE .

    $default  reduce using rule 28 (block)


State 102

   30 statementr: statementr statement .

    $default  reduce using rule 30 (statementr)


State 103

   17 statement: name ASSIGNOP . expression SEMICO

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 140
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 104

   63 name: name DOTOP . IDENTIFIER

    IDENTIFIER  shift, and go to state 141


State 105

   18 statement: name LPAREN . arglist RPAREN SEMICO

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 136
    name           go to state 94
    newexpression  go to state 95
    arglist        go to state 142
    unaryop        go to state 96


State 106

   64 name: name LBRACK . expression RBRACK
   67     | name LBRACK . expression error

    THIS         shift, and go to state 63
    READ         shift, and go to state 83
    NEW          shift, and go to state 84
    NULLKEYWORD  shift, and go to state 85
    LPAREN       shift, and go to state 86
    PLUS         shift, and go to state 87
    MINUS        shift, and go to state 88
    NOT          shift, and go to state 89
    IDENTIFIER   shift, and go to state 90
    NUM          shift, and go to state 92

    expression     go to state 143
    name           go to state 94
    newexpression  go to state 95
    unaryop        go to state 96


State 107

   35 methoddec: type IDENTIFIER LPAREN paramlist RPAREN block .

    $default  reduce using rule 35 (methoddec)


State 108

   31 conditionalstatement: IF LPAREN expression . RPAREN statement
   32                     | IF LPAREN expression . RPAREN statement ELSE statement
   49 expression: expression . relationop expression
   50           | expression . relationop error
   51           | expression . productop expression
   52           | expression . productop error
   53           | expression . sumop expression
   54           | expression . sumop error

    RPAREN   shift, and go to state 144
    PLUS     shift, and go to state 116
    MINUS    shift, and go to state 117
    DOUBEQ   shift, and go to state 118
    NOTEQ    shift, and go to state 119
    LESSEQ   shift, and go to state 120
    GREATEQ  shift, and go to state 121
    LESS     shift, and go to state 122
    GREAT    shift, and go to state 123
    TIMES    shift, and go to state 124
    DIVIDE   shift, and go to state 125
    MOD      shift, and go to state 126
    DOUBAND  shift, and go to state 127
    DOUBBAR  shift, and go to state 128

    relationop  go to state 130
    productop   go to state 131
    sumop       go to state 132


State 109
